fix: all models running
